--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "axios": "^1.1.2",
+    "vant": "^2.12.50",
+    "vue-router": "^3.4.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
